Working CachedFaucet code... still need to generalize it. People must also run code code using [0m[[0minfo[0m] [0mLoading project definition from /home/cgrant/projects/gatordsr/code/project[0m [0m[[0minfo[0m] [0mSet current project to gatordsr (in build file:/home/cgrant/projects/gatordsr/code/)[0m [0m[[31merror[0m] [0mExpected key[0m [0m[[31merror[0m] [0m...[0m [0m[[31merror[0m] [0m^[0m